@@ -4,6 +4,11 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2017-01-22
+
+  - Completed unit tests for OANDA price source fetcher.
+
+
 2017-01-21
 
   - Fixed #155: Use entry_points instead of scripts in setup.py.
